outputs/generated_env/kubernetes/network_policies/cybersim-subnet-2-allow-etcd-to-kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-etcd-to-kube-state-metrics
  namespace: cybersim-subnet-2
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-subnet-1
      podSelector:
        matchLabels:
          app.kubernetes.io/name: etcd
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  policyTypes:
  - Ingress
